--- a/menu.html
+++ b/menu.html
@@ -64,8 +64,8 @@ https://templatemo.com/tm-507-victory
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Thực đơn của chúng tôi</h1>
-                    <p>Thông qua thực đơn, hãy chọn món mà các bán muốn thưởng thức nhé!</p>
+                    <h1 class="animate-text">Thực đơn của chúng tôi</h1>
+                    <p class="animate-text">Thông qua thực đơn, hãy chọn món mà các bán muốn thưởng thức nhé!</p>
                 </div>
             </div>
         </div>
